flex方式完成携程网页面布局

--- a/H5-Flex/css/index.css
+++ b/H5-Flex/css/index.css
@@ -9,9 +9,19 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 a {
+    color: #000;
     text-decoration: none;
 }
+
+
+/* 搜索 */
 
 .search_index {
     display: flex;
@@ -76,4 +86,233 @@ a {
     font-size: 12px;
     text-align: center;
     /* background-color: pink; */
+}
+
+
+/* 焦点图 */
+
+.focus {
+    padding-top: 44px;
+}
+
+.focus img {
+    width: 100%;
+}
+
+
+/* 导航-local-nav */
+
+.local-nav {
+    display: flex;
+    height: 64px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    margin: 3px 4px;
+}
+
+.local-nav li {
+    flex: 1;
+}
+
+.local-nav a {
+    display: flex;
+    /* 设置主轴为Y轴 */
+    flex-direction: column;
+    /* 设置侧轴X轴 居中对齐 */
+    align-items: center;
+    font-size: 12px;
+}
+
+
+/* 属性选择器的使用 */
+
+.local-nav li [class^=local_nav_icon] {
+    width: 32px;
+    height: 32px;
+    margin-top: 8px;
+    background: url(../images/localnav_bg.png) no-repeat 0 0;
+    background-size: 32px auto;
+}
+
+
+/* 这个属性很少使用，要记得哦 */
+
+.local-nav li .local_nav_icon_2 {
+    background-position: 0 -32px;
+}
+
+.local-nav li .local_nav_icon_3 {
+    background-position: 0 -64px;
+}
+
+.local-nav li .local_nav_icon_4 {
+    background-position: 0 -96px;
+}
+
+.local-nav li .local_nav_icon_5 {
+    background-position: 0 -128px;
+}
+
+
+/* 导航nav */
+
+nav {
+    border-radius: 8px;
+    overflow: hidden;
+    margin: 0 4px 3px;
+}
+
+.nav_common {
+    display: flex;
+    height: 88px;
+    /* background-color: pink; */
+}
+
+.nav_common_icon {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav_common_icon a {
+    flex: 1;
+    text-align: center;
+    line-height: 44px;
+    color: #fff;
+    font-size: 14px;
+    text-shadow: 1px 1px rgba(0, 0, 0, .2);
+}
+
+.nav_common_icon a:nth-child(1) {
+    border-bottom: 1px solid #fff;
+}
+
+.nav_common_icon:nth-child(1) a {
+    border-bottom: 0;
+    background: url(../images/hotel.png) no-repeat bottom center;
+    background-size: 121px auto;
+}
+
+.nav_common_icon:nth-child(-n+2) {
+    border-right: 1px solid #ffffff;
+}
+
+.nav_common:nth-child(2) {
+    margin: 3px 0;
+}
+
+.nav_common:nth-child(1) {
+    background: -webkit-linear-gradient(left, #fa5a55, #fa994d);
+}
+
+.nav_common:nth-child(2) {
+    background: -webkit-linear-gradient(left, #4B90ED, #53BCED);
+}
+
+.nav_common:nth-child(3) {
+    background: -webkit-linear-gradient(left, #34C2A9, #6cd559)
+}
+
+
+/* 侧导航栏subnav_entry */
+
+.subnav_entry {
+    display: flex;
+    border-radius: 8px;
+    /* 换行 */
+    flex-wrap: wrap;
+    background-color: #fff
+}
+
+.subnav_entry li {
+    flex: 20%;
+}
+
+.subnav_entry a {
+    display: flex;
+    /* 设置Y轴为主轴 */
+    flex-direction: column;
+    /* 设置侧轴 X轴 居中对齐 */
+    align-items: center;
+}
+
+.subnav_entry_icon {
+    width: 28px;
+    height: 28px;
+    background-color: pink;
+    margin-top: 5px;
+    background: url(../images/subnav-bg.png) no-repeat 0 0;
+    background-size: 28px auto;
+}
+
+
+/* 销售模块 */
+
+.sales_box {
+    background-color: #fff;
+    margin: 4px;
+    border-top: 1px solid #bbbbbb;
+}
+
+.sales_hd {
+    position: relative;
+    height: 44px;
+    border-bottom: 1px solid #cccccc;
+}
+
+.sales_hd h2 {
+    position: relative;
+    text-indent: -999px;
+    overflow: hidden;
+}
+
+.sales_hd h2::after {
+    position: absolute;
+    content: '';
+    width: 75px;
+    height: 15px;
+    top: 8px;
+    left: 20px;
+    background-color: pink;
+    background: url(../images/hot.png) no-repeat 0 -20px;
+    background-size: 79px auto;
+}
+
+.more {
+    position: absolute;
+    top: 0px;
+    color: #fff;
+    right: 15px;
+    background: -webkit-linear-gradient(left, #FF506C, #f777c3);
+    padding: 1px 30px 1px 10px;
+    border-radius: 20px;
+}
+
+.more::after {
+    content: '';
+    position: absolute;
+    top: 8px;
+    right: 15px;
+    width: 7px;
+    height: 7px;
+    border-top: 1px solid #fff;
+    border-right: 1px solid #fff;
+    transform: rotate(45deg);
+}
+
+.row {
+    display: flex;
+    border-bottom: 1px solid #eee;
+}
+
+.row a {
+    flex: 1;
+}
+
+.row a:nth-child(1) {
+    border-right: 1px solid #eee;
+}
+
+.row a img {
+    width: 100%;
 }
